added ssh_connection_policies
